tests/algorithms/transpiler/FS/graphs/prim.error
exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/algorithms/transpiler/FS/graphs/prim.fs(113,43): error FS0039: The field, constructor or member 'Keys' is not defined

/workspace/mochi/tests/algorithms/transpiler/FS/graphs/prim.fs(178,43): error FS0039: The field, constructor or member 'Keys' is not defined
